// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recruitment/create-candidate/workable CreateCandidate when specified job does exist when CV file name is missing returns CVFileNameRequired error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Missing CV file name\\",
  \\"detail\\": \\"CV file name is required.\\",
  \\"code\\": \\"CVFileNameRequired\\"
}
AST Path: definitions[0].statements[4].statements[0]
Original Map Location: Line 23, column 5",
}
`;

exports[`recruitment/create-candidate/workable CreateCandidate when specified job does exist when unsupported CV file MIME type used returns CVMIMETypeNotSupported error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"CV MIME type not supported\\",
  \\"detail\\": \\"File type cv-sample.xml is not supported by Workable provider.\\",
  \\"code\\": \\"CVMIMETypeNotSupported\\"
}
AST Path: definitions[0].statements[4].statements[0]
Original Map Location: Line 23, column 5",
}
`;

exports[`recruitment/create-candidate/workable CreateCandidate when specified job does exist when valid inputs passed performs correctly 1`] = `
Ok {
  "value": Object {
    "id": "d6487db",
    "jobId": "04D2AB5A08",
    "rateLimit": Object {
      "bucket": "workable",
      "remainingRequests": 3,
      "remainingRequestsPercentage": 30,
      "resetTimestamp": 1672751757,
      "totalRequests": 10,
    },
  },
}
`;

exports[`recruitment/create-candidate/workable CreateCandidate when specified job does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get job by ID NOT-EXISTING. Check that the job with that ID exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"workable\\"
  }
}
AST Path: definitions[0].statements[3].statements[0]
Original Map Location: Line 19, column 5",
}
`;

exports[`recruitment/create-candidate/workable CreateCandidate when specified subdomain does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get subdomain by name invalid-superface. Check that the subdomain with that name exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"workable\\"
  }
}
AST Path: definitions[0].statements[2].statements[0]
Original Map Location: Line 12, column 5",
}
`;

exports[`recruitment/create-candidate/workable CreateCandidateFeatures returns valid workable features 1`] = `
Ok {
  "value": Object {
    "cvMIMETypes": Array [
      "application/pdf",
      "text/rtf",
      "application/msword",
      "application/vnd.openxmlformats-officedocument.custom-properties+xml",
    ],
    "cvUploadMethods": Array [
      "url",
      "file",
    ],
  },
}
`;
